--- a/posters/PGRSymposium22/PGRSymp22-Poster.html
+++ b/posters/PGRSymposium22/PGRSymp22-Poster.html
@@ -394,7 +394,7 @@ span > #tab:mytable {
  width: 10%;
 }
 #main-img-right {
- width: 11%;
+ width: 10%;
 }
 p.caption {
  margin-top: 0;
@@ -404,14 +404,14 @@ p.caption {
 <div id="background" class="section level1">
 <h1>Background</h1>
 <p><span class="citation">Knobe (<a href="#ref-knobe2003" role="doc-biblioref">2003</a>)</span> showed that people are more likely to say that <span style="color:red">harmful</span> side effects are brought about <em>intentionally</em> when compared with <span style="color:green">helpful</span> side effects. Furthermore, people assign <em>more blame</em> for <span style="color:red">harmful</span> side effects than they do <em>praise</em> for <span style="color:green">helpful</span> side effects. Observers appear to utilise the moral valence of actions’ unintended consequences to determine intentionality, and deserved praise and blame.</p>
-<p>Previous work has demonstrated that character descriptions can moderate the side-effect effect <span class="citation">(SEE; Stewart et al. <a href="#ref-stewart2021" role="doc-biblioref">2021</a>)</span> such that participants’ responses can be influenced by the incongruency between the agent’s character and the outcome of their actions.</p>
-<p>The current research investigates whether varying more fine-grain specific agent traits moderates the SEE in a similar manner.</p>
+<p>Previous work has demonstrated that character descriptions can moderate the side-effect effect <span class="citation">(SEE; Stewart et al. <a href="#ref-stewart2021" role="doc-biblioref">2021</a>)</span> such that participants’ responses can be influenced by the congruency between the agent’s character and the outcome of their actions.</p>
+<p>The current research investigates whether varying more fine-grained specific agent traits moderates the SEE in a similar manner.</p>
 </div>
 <div id="replication-of-the-see" class="section level1">
 <h1>Replication of the SEE</h1>
 <p><strong>Replication in a UK Sample:</strong><br />
-More <em>blame</em> (𝑀=4.80, 𝑆𝐷=1.35) in <span style="color:red"><em>harm</em></span> condition (86% said intentional, <em>p</em> &lt; .001)<br />
-Little <em>praise</em> (𝑀=2.11, 𝑆𝐷=1.74) in <span style="color:green"><em>help</em></span> condition (93% said not intentional, <em>p</em> &lt; .001)</p>
+More <em>blame</em> (𝑀=4.80, 𝑆𝐷=1.35) in <span style="color:red"><em>harm</em></span> condition, 86% said intentional <em>p</em> &lt; .001<br />
+Little <em>praise</em> (𝑀=2.11, 𝑆𝐷=1.74) in <span style="color:green"><em>help</em></span> condition, 93% said not intentional <em>p</em> &lt; .001</p>
 <p>Difference highly significant 𝜒2 (1,<em>N</em>=88)=29.9, <em>p</em>&lt;.001, <em>d</em>=1.43 95% CI [0.92, 1.95]<br />
 Larger effect sizes than original (Replication: <em>d</em> = 2.45 &amp; <em>d</em> = 1.70; Original: <em>d</em> = 1.45 &amp; <em>d</em> = 1.55)</p>
 <p><strong>Vignette example:</strong></p>
@@ -440,20 +440,20 @@ Figure 1: Ratings of Powerfulness for a selection of Job roles
 </div>
 <div id="the-job-role-of-the-agent" class="section level1">
 <h1>The Job Role of the Agent</h1>
-<p><strong>Overview:</strong> It was considered that the Chairman/CEO character in the original Knobe (2003) study was influencing participants’ decision making as the job role has the stereotype/prototype of large amounts of control and responsibility.Using pilot data, 64 novel vignettes were developed utilising the most prominently featured job roles from the pilot study.<br />
+<p><strong>Overview:</strong> It was considered that the Chairman/CEO character in the original Knobe (2003) study was influencing participants’ decision making as the job role has the stereotype/prototype of large amounts of control and responsibility. Using pilot data, 64 novel vignettes were developed utilising the most prominently featured job roles from the pilot study.<br />
 This study followed a similar paradigm as the Knobe (2003) study but modified the intention question response system to match the Likert 0-6 response on praise/blame question. This modification allowed the use of Cumulative Link Mixed Models (CLMMs) for analysis.<br />
 <strong>Vignette modification:</strong> Job role was used twice in the vignette and once within each question. E.g. “A supermarket manager / shelf stacker is considering changing…”<br />
-<strong>Result:</strong> <em>N</em> = 100. The model showed the typical SEE was present in all conditions (<em>p</em> &lt; .001). However, the agent’s <span style="color:red">job role did not significantly moderate the SEE</span> in neither praise/blame ratings (<em>p</em> = .823) nor intention ratings (<em>p</em> = .472).</p>
+<strong>Result:</strong> <em>N</em> = 100. The model showed the typical SEE was present in all conditions (<em>p</em> &lt; .001). However, the agent’s <span style="color:red">job role did not moderate the SEE</span> in praise/blame ratings (<em>p</em> = .823) and intention ratings (<em>p</em> = .472).</p>
 </div>
 <div id="the-sex-of-the-agent" class="section level1">
 <h1>The Sex of the Agent</h1>
 <p><strong>Overview:</strong> To further investigate the influence of the agent characteristics, the aim of this study was to manipulate the vignettes by modifying the sex of the agent.<br />
 <strong>Vignette modification:</strong> A gendered name and pronouns were used twice each in the vignette E.g. “Oliver/Emma is a supermarket manager and he/she is considering changing …”. The name was also used in both the intention and praise/blame questions.<br />
-<strong>Result:</strong> <em>N</em> = 100. The model showed the SEE was present in all conditions (<em>p</em> &lt; .001). However, the <span style="color:red">sex of the agent did not significantly moderate the SEE</span> in neither praise/blame ratings (<em>p</em> = .803) nor intention ratings (<em>p</em> = .619).</p>
+<strong>Result:</strong> <em>N</em> = 100. The model showed the SEE was present in all conditions (<em>p</em> &lt; .001). However, the <span style="color:red">sex of the agent did not moderate the SEE</span> in praise/blame ratings (<em>p</em> = .803) and intention ratings (<em>p</em> = .619).</p>
 </div>
 <div id="the-power-of-the-agent" class="section level1">
 <h1>The Power of the Agent</h1>
-<p><strong>Overview:</strong> Research has shown that the level of power the agent possess (as a result of their position; chief/commoner) impacts the SEE <span class="citation">(<a href="#ref-robbins2017" role="doc-biblioref">Robbins et al., 2017</a>)</span>. To investigate this further, the level of power was modified to be more salient and not just inferred as a result of a job role.<br />
+<p><strong>Overview:</strong> Research has shown that the level of power the agent possesses (as a result of their position; chief/commoner) impacts the SEE <span class="citation">(<a href="#ref-robbins2017" role="doc-biblioref">Robbins et al., 2017</a>)</span>. To investigate this further, the level of power was modified to be more salient and not just inferred as a result of a job role.<br />
 <strong>Vignette modification:</strong> “A supermarket manager is considering changing the layout of the aisles. The manager is very/not very powerful and has lots of/little influence with the chain’s management board.”</p>
 <div class="figure" style="text-align: center"><span style="display:block;" id="fig:figure2"></span>
 <img src="figures/pb-plot.png" alt="Distribution of Blame (Purple) and Praise (Green) ratings for Helpful/Harmful outcomes by level of Power" width="100%" />
@@ -466,8 +466,10 @@ Figure 2: Distribution of Blame (Purple) and Praise (Green) ratings for Helpful/
 <div id="next-steps" class="section level1">
 <h1>Next Steps…</h1>
 <p>Future work will investigate how participants utilise information about agents’ power to understand the results, for example, the possible role of norm violations and participants’ own view of cost-benefit analyses. To investigate further, a larger and more diverse sample using Prolific recruitment will be used.<br />
-Understanding the SEE has applications to real world affairs that include jury decision making, business/brand image, product marketing and advertisement.<br />
-Find out more and/or get future updates by scanning the QR code below or visit: <a href="https://bradk.co.uk/see">bradk.co.uk/see</a></p>
+</p>
+<p>Understanding the SEE has applications to real world affairs that include jury decision making, business/brand image, product marketing and advertisement.<br />
+</p>
+<p>Find out more and/or get future updates by scanning the QR code below or visit: <a href="https://bradk.co.uk/see">bradk.co.uk/see</a></p>
 </div>
 <div id="references" class="section level1 unnumbered">
 <h1>References</h1>
